--- a/crud-demo/src/main/resources/application.properties
+++ b/crud-demo/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/test-assessment
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.cache.cache-names=customer
+spring.cache.redis.key-prefix=cc
